# Deep_learning_project

./: .gitignore  02_feature_extraction.ipynb  README.md  notebook3.ipynb  notebook4.ipynb  notebook5v2.ipynb  pyproject.toml  readme_dataset.txt  requirements.txt
configs/: train_mlp_s3dis.yaml
docs/: collaboration_plan.md  feasibility_evaluation.md  mockup.md  repository_guide.md  work_plan_adrian.md  work_plan_leonardo.md  work_plan_matteo.md  work_plan_ricardo.md
eval-demo/notebooks/: 02_feature_extraction.ipynb
notebooks/: 01_setup_and_data.ipynb  02_feature_extraction.ipynb  02a_encoder_smoke_test.ipynb  03_train_mlp.ipynb  04_evaluate.ipynb  04b_evaluate_labels.ipynb  05_demo.ipynb  06_visualize_room.ipynb  clip_utils_test.ipynb  pyproject.toml
scripts/: demo.py  export_polycam.py  extract_features.py  prepare_s3dis.py  visualize_concerto_pca.py
src/: clip_utils.py  clip_utils_1.py  dataset.py  encoder.py  evaluate.py  evaluate_labels.py  train.py  translation_head.py  visualize.py
tests/: test_clip_utils.py  test_dataset.py  test_encoder.py  test_evaluate_utils.py  test_train_utils.py  test_translation_head.py  visualization_test.ipynb
